# tg-bot-aiogram

./: .env  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py
app/handlers/: __init__.py  admin.py  start.py
