[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-bot-aiogram"
version = "0.1.0"
description = "Minimal aiogram v3 bot project structure"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3",
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
dev = []
